<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clHelpScreen"
    style="@style/BACKGROUND"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <Switch
        android:id="@+id/swDarkMode"
        android:layout_width="60dp"
        android:layout_height="32dp"
        android:layout_margin="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.986"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,UseSwitchCompatOrMaterialXml" />

    <TextView
        android:id="@+id/tvText1"
        style="@style/TEXTCOLOR"
        android:layout_width="326dp"
        android:layout_height="71dp"
        android:layout_marginTop="4dp"
        android:text="@string/tvText1"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle1" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/rock_right"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvText1" />

    <TextView
        android:id="@+id/tvPaper"
        style="@style/TEXTCOLOR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tvPaper"
        app:layout_constraintBottom_toTopOf="@+id/tvText2"
        app:layout_constraintEnd_toStartOf="@+id/tvScissors"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toEndOf="@+id/tvRock"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.093" />

    <TextView
        android:id="@+id/tvScissors"
        style="@style/TEXTCOLOR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="52dp"
        android:text="@string/tvScissors"
        app:layout_constraintBottom_toTopOf="@+id/tvText2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6"
        app:layout_constraintVertical_bias="0.166" />

    <TextView
        android:id="@+id/tvText2"
        style="@style/TEXTCOLOR"
        android:layout_width="324dp"
        android:layout_height="57dp"
        android:text="@string/tvText2"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.553" />

    <TextView
        android:id="@+id/tvTitle1"
        style="@style/TEXTCOLOR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="@string/tvInstructions"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRock"
        style="@style/TEXTCOLOR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/tvRock"
        app:layout_constraintBottom_toTopOf="@+id/tvText2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.062" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/scissors_right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/tvText1" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/paper_right"
        app:layout_constraintEnd_toStartOf="@+id/imageView6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/tvText1" />

    <TextView
        android:id="@+id/tvTitle2"
        style="@style/TEXTCOLOR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="28dp"
        android:text="@string/tvRules"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvText2" />

    <TextView
        android:id="@+id/tvText3"
        style="@style/TEXTCOLOR"
        android:layout_width="363dp"
        android:layout_height="127dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tvText3"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle2"
        app:layout_constraintVertical_bias="0.074" />

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>