<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/BACKGROUND"
    tools:context=".MainActivity"
    tools:ignore="UseSwitchCompatOrMaterialXml">


    <Switch
        android:id="@+id/swDarkMode"
        android:layout_width="60dp"
        android:layout_height="32dp"
        android:layout_margin="20dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.986"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/etUserName"
        style="@style/EDITTEXTBACKGROUND"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="448dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/etUserName"
        android:inputType="text"
        android:paddingHorizontal="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEnter"
        style="@style/ACTIONBUTTONBACKGROUND"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/btnEnter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUserName"
        app:layout_constraintVertical_bias="0.262" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAjuda"
        style="@style/ACTIONBUTTONBACKGROUND"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/btnHelp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="300dp"
        android:layout_height="359dp"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toTopOf="@+id/etUserName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />


</androidx.constraintlayout.widget.ConstraintLayout>